<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.suryajeet945.cc.gaugematchernew.GaugeMeasureActivity"
    android:weightSum="1"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <include layout="@layout/my_toolbar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/enterTheGaugeValueInMm"
                android:id="@+id/TVenterTheGaugeValueInMm" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ETenterTheGaugeValueInMm"
                android:text="@string/blanck"
                android:inputType="numberDecimal" />

            <Button
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:text="@string/checkGauge"
                android:id="@+id/btGaugeCheck"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.03"
                android:onClick="onbtGaugeCheckClick"
                android:background="@drawable/button_background" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:id="@+id/relativeHeader"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/wireno"
                    android:id="@+id/TVMm"
                    android:gravity="left"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/mm"
                    android:id="@+id/TVNo"
                    android:gravity="right"
                    android:layout_marginRight="20dp"/>
            </LinearLayout>


            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/resultListView"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
